[gd_scene load_steps=7 format=3 uid="uid://b8t5yp4tvs11y"]

[ext_resource type="Script" uid="uid://bcn22xiiqwgnw" path="res://scripts/play_scene.gd" id="1_wklqy"]
[ext_resource type="Script" uid="uid://c0q5nbmmhmfdx" path="res://scripts/calender_panel.gd" id="2_kdvgv"]
[ext_resource type="Script" uid="uid://c6vg1037vinuw" path="res://scripts/card_panels.gd" id="2_que2y"]
[ext_resource type="Script" uid="uid://lair8s82mf8w" path="res://scripts/execute_panel.gd" id="3_kdvgv"]
[ext_resource type="Script" uid="uid://c65ks8k4rltbb" path="res://scripts/hand_panel.gd" id="5_da3qe"]
[ext_resource type="PackedScene" uid="uid://d0r0auv73k4mw" path="res://scenes/card.tscn" id="5_ief5h"]

[node name="PlayScene" type="Node"]
script = ExtResource("1_wklqy")

[node name="CalenderPanel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.47058824)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -562.5
offset_top = -650.0
offset_right = 562.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("2_kdvgv")

[node name="MedicalPanel" type="Panel" parent="CalenderPanel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 1075.0
offset_bottom = 150.0
mouse_filter = 1
script = ExtResource("3_kdvgv")

[node name="CardPanel1" type="Panel" parent="CalenderPanel/MedicalPanel"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="CardPanel2" type="Panel" parent="CalenderPanel/MedicalPanel"]
layout_mode = 0
offset_left = 150.0
offset_right = 250.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="CardPanel3" type="Panel" parent="CalenderPanel/MedicalPanel"]
layout_mode = 0
offset_left = 300.0
offset_right = 400.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="CardPanel4" type="Panel" parent="CalenderPanel/MedicalPanel"]
layout_mode = 0
offset_left = 450.0
offset_right = 550.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="CardPanel5" type="Panel" parent="CalenderPanel/MedicalPanel"]
layout_mode = 0
offset_left = 600.0
offset_right = 700.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="CardPanel6" type="Panel" parent="CalenderPanel/MedicalPanel"]
layout_mode = 0
offset_left = 750.0
offset_right = 850.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="CardPanel7" type="Panel" parent="CalenderPanel/MedicalPanel"]
layout_mode = 0
offset_left = 900.0
offset_right = 1000.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="ActivityPanel" type="Panel" parent="CalenderPanel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 50.0
offset_top = 200.0
offset_right = 1075.0
offset_bottom = 300.0
mouse_filter = 1
script = ExtResource("3_kdvgv")

[node name="CardPanel1" type="Panel" parent="CalenderPanel/ActivityPanel"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="CardPanel2" type="Panel" parent="CalenderPanel/ActivityPanel"]
layout_mode = 0
offset_left = 150.0
offset_right = 250.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="CardPanel3" type="Panel" parent="CalenderPanel/ActivityPanel"]
layout_mode = 0
offset_left = 300.0
offset_right = 400.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="CardPanel4" type="Panel" parent="CalenderPanel/ActivityPanel"]
layout_mode = 0
offset_left = 450.0
offset_right = 550.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="CardPanel5" type="Panel" parent="CalenderPanel/ActivityPanel"]
layout_mode = 0
offset_left = 600.0
offset_right = 700.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="CardPanel6" type="Panel" parent="CalenderPanel/ActivityPanel"]
layout_mode = 0
offset_left = 750.0
offset_right = 850.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="CardPanel7" type="Panel" parent="CalenderPanel/ActivityPanel"]
layout_mode = 0
offset_left = 900.0
offset_right = 1000.0
offset_bottom = 100.0
mouse_filter = 1
script = ExtResource("2_que2y")

[node name="HandPanel" type="Panel" parent="CalenderPanel"]
self_modulate = Color(1, 1, 1, 0.74509805)
layout_mode = 0
offset_left = 50.0
offset_top = 350.0
offset_right = 1075.0
offset_bottom = 600.0
mouse_filter = 1
script = ExtResource("5_da3qe")

[node name="Card" parent="CalenderPanel/HandPanel" instance=ExtResource("5_ief5h")]
position = Vector2(-240.5, -558)

[node name="Button" type="Button" parent="."]
offset_right = 100.0
offset_bottom = 50.0

[connection signal="button_down" from="Button" to="CalenderPanel/HandPanel" method="_on_button_button_down"]
